Bug 1233340: [ffmpeg] Support YUV420J pixel format. r=kentuckyfriedtakahe a=sylvestre

YUV420J is 12bpp YUV420P.